--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             </div>
           </div>
           <div style="padding-left: 31.30px; padding-right: 31.30px; padding-top: 15.65px; padding-bottom: 15.65px; background: #F3EDE5; border-radius: 10.43px; justify-content: flex-start; align-items: center; gap: 13.04px; display: inline-flex">
-            <div style="color: #1E1E1E; font-size: 23.48px; font-family: Montserrat; font-weight: 600; word-wrap: break-word">Comprar ahora</div>
+            <div style="color: #1E1E1E; font-size: 23.48px; font-family: Montserrat; font-weight: 600; word-wrap: break-word">Obten el tuyo!</div>
           </div>
         </div>
         <div style="width: 450px; height: 400px; left: 726px; top: 123px; position: absolute; background: #F3EDE5; border-top-left-radius: 200px; border-top-right-radius: 200px; border-bottom-right-radius: 200px"></div>
