--- a/index.html
+++ b/index.html
@@ -37,16 +37,13 @@
             </a>
         </div> -->
 
-        <!-- Row 1 -->
+
+        <!-- DUMMIE IMAGE -->
         <div class="row align-items-center justify-content-center">
             <img class="img-fluid" src="assets/website-dummie.png" alt="img-dummie">
         </div>
-
-       
-   
+        
     </div>
-
-
 
  <!-- PHONE CONTAINER  --> 
     <div class="phone-container grid container-fluid justify-content-evenly align-items-center">
