correccion link tiktok

--- a/index 2.html
+++ b/index 2.html
@@ -69,7 +69,7 @@
               <a class="socialIcon" href="https://www.instagram.com/pangea.juego/?igsh=aW1jMjF2MTQxOTdr&utm_source=qr">
                 <img src="assets/igLogo.svg" alt="Logo"  height="45">
               </a>
-              <a class="socialIcon" href="https://www.tiktok.com/@pangea.juego?_t=8ixN9zK8wfF&_r=1">
+              <a class="socialIcon" href="https://www.instagram.com/pangea.juego/?igsh=aW1jMjF2MTQxOTdr&utm_source=qr">
                 <img src="assets/tiktokLogo.svg" alt="Logo"  height="45">
               </a>
                 </div>
