--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         <!-- Content container -->
         <div class="row" style="margin-top: 135px;">
              <!-- Teaser Video -->
-                <video controls autoplay muted loop>
+                <video  autoplay muted loop>
                     <source src="assets/teaserAnimado.mp4" type="video/mp4">
                   Your browser does not support the video tag.
                   </video>
