Update: wa btn + padding

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         <!-- Content container -->
         <div class="row" style="margin-top: 135px;">
              <!-- Teaser Video -->
-                <video controls autoplay muted loop>
+                <video controls autoplay muted loop style="padding: 0 0 0 0;">
                     <source src="assets/teaserAnimado.mp4" type="video/mp4">
                   Your browser does not support the video tag.
                   </video>
