--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         <!-- Content container -->
         <div class="row" style="margin-top: 135px;">
              <!-- Teaser Video -->
-                <video controls autoplay muted loop playsinline>
+                <video autoplay loop playsinline>
                     <source src="assets/teaserAnimado.mp4" type="video/mp4">
                   Your browser does not support the video tag.
                   </video>
