Update: bg and navbar color

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <div class="container justify-content-between">
                 <div class="col-auto">
                     <a class="" href="https://pangeajuego.com/">
-                        <img src="assets/websiteLogo.png" alt="Logo" width="62" height="62">
+                        <img src="assets/websiteLogo.svg" alt="Logo" width="62" height="62">
                     </a>
                 </div>
             
@@ -85,7 +85,7 @@
             <div class="container justify-content-between">
                 <div class="col-auto">
                     <a class="" href="https://pangeajuego.com/">
-                        <img src="assets/websiteLogo.png" alt="Logo" width="62" height="62">
+                        <img src="assets/websiteLogo.svg" alt="Logo" width="62" height="62">
                     </a>
                 </div>
             
