--- a/index.html
+++ b/index.html
@@ -56,12 +56,23 @@
         </nav>
 
         <!-- Content container -->
-        <div class="row teaser-desktop">
-            <!-- Teaser Video -->
-                <video controls muted autoplay loop playsinline style="max-height: 82vh;">
+        <div class="row teaser-desktop justify-content-around align-items-center">
+            <div class="col-auto">
+                <img src="assets/Aguatero Gif Web.gif" style="width: 20vw;">
+            </div>
+            
+            <div class="col-auto">
+                 <!-- Teaser Video -->
+                 <video controls muted autoplay loop playsinline style="max-width: 25vw;">
                     <source src="assets/teaserAnimado.mp4" type="video/mp4">
                 Your browser does not support the video tag.
                 </video>
+            </div>
+
+            <div class="col-auto">
+                <img src="assets/TRex Gif Web.gif" style="width: 20vw;">
+            </div>
+           
         </div>
 
         <div class="whatsapp-button whatsapp-btn-container">
