--- a/index.html
+++ b/index.html
@@ -76,10 +76,14 @@
         </div>
 
         <div class="whatsapp-button whatsapp-btn-container">
-            <a class="socialIcon" href="https://wa.me/+51967802196" style="color: #F3EDE5; text-decoration: none;">
+            <!-- <a class="socialIcon" href="https://wa.me/+51967802196" style="color: #F3EDE5; text-decoration: none;">
                 <img src="assets/whatsappLogo.svg" alt="Logo"  height="25">
                 COMPRAR
-        </a>
+            </a> -->
+            <a class="socialIcon" href="https://ig.me/m/pangea.juego">
+                <img src="assets/whatsappLogo.svg" alt="Logo"  height="25">
+                COMPRAR
+            </a>
         </div>
 
     </div>
@@ -127,10 +131,16 @@
         </div>
 
         <div class="whatsapp-button whatsapp-btn-container">
-            <a class="socialIcon" href="https://wa.me/+51967802196">
+            <!-- <a class="socialIcon" href="https://wa.me/+51967802196">
                 <img src="assets/whatsappLogo.svg" alt="Logo"  height="25">
                 COMPRAR
-          </a>
+            </a> -->
+         
+            <a class="socialIcon" href="https://ig.me/m/pangea.juego">
+                <img src="assets/whatsappLogo.svg" alt="Logo"  height="25">
+                COMPRAR
+            </a>
+          
         </div>
 
     </div>
