--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                 COMPRAR
             </a> -->
             <a class="socialIcon" href="https://ig.me/m/pangea.juego">
-                <img src="assets/whatsappLogo.svg" alt="Logo"  height="25">
+                <img src="assets/igLogo.svg" alt="Logo"  height="25" style="padding-right: 5px;">
                 COMPRAR
             </a>
         </div>
@@ -137,7 +137,7 @@
             </a> -->
          
             <a class="socialIcon" href="https://ig.me/m/pangea.juego">
-                <img src="assets/whatsappLogo.svg" alt="Logo"  height="25">
+                <img src="assets/igLogo.svg" alt="Logo"  height="25" style="padding-right: 5px;">
                 COMPRAR
             </a>
           
